[gd_scene load_steps=9 format=3 uid="uid://f6tbwoyd23nw"]

[ext_resource type="Script" path="res://game/ui/menus/hud/hud.gd" id="1_iqgiq"]
[ext_resource type="Theme" uid="uid://shw4guvfs7oy" path="res://game/ui/themes/pixel_textured/brown/theme.tres" id="1_jw6vi"]

[sub_resource type="Image" id="Image_78yir"]
data = {
"data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 73, 0, 0, 255, 73, 0, 0, 255, 73, 0, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 73, 0, 0, 255, 73, 0, 0, 255, 73, 0, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 73, 0, 0, 255, 219, 0, 0, 255, 219, 0, 0, 255, 219, 0, 0, 255, 73, 0, 0, 255, 0, 0, 0, 0, 73, 0, 0, 255, 186, 0, 0, 255, 186, 0, 0, 255, 186, 0, 0, 255, 73, 0, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 73, 0, 0, 255, 219, 0, 0, 255, 206, 0, 0, 255, 255, 194, 161, 255, 206, 0, 0, 255, 206, 0, 0, 255, 73, 0, 0, 255, 186, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 186, 0, 0, 255, 73, 0, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 73, 0, 0, 255, 219, 0, 0, 255, 206, 0, 0, 255, 255, 194, 161, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 186, 0, 0, 255, 73, 0, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 73, 0, 0, 255, 219, 0, 0, 255, 255, 194, 161, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 186, 0, 0, 255, 73, 0, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 73, 0, 0, 255, 219, 0, 0, 255, 255, 194, 161, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 186, 0, 0, 255, 73, 0, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 73, 0, 0, 255, 219, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 186, 0, 0, 255, 73, 0, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 73, 0, 0, 255, 219, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 186, 0, 0, 255, 73, 0, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 73, 0, 0, 255, 219, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 186, 0, 0, 255, 73, 0, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 73, 0, 0, 255, 219, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 186, 0, 0, 255, 73, 0, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 73, 0, 0, 255, 219, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 186, 0, 0, 255, 73, 0, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 73, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 206, 0, 0, 255, 73, 0, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 73, 0, 0, 255, 73, 0, 0, 255, 73, 0, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 16, 41, 81, 255, 16, 41, 81, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 16, 41, 81, 255, 16, 41, 81, 255, 16, 41, 81, 255, 28, 72, 144, 255, 28, 72, 144, 255, 16, 41, 81, 255, 16, 41, 81, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 16, 41, 81, 255, 16, 41, 81, 255, 28, 72, 144, 255, 28, 72, 144, 255, 28, 72, 144, 255, 28, 72, 144, 255, 28, 72, 144, 255, 28, 72, 144, 255, 28, 72, 144, 255, 16, 41, 81, 255, 16, 41, 81, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 16, 41, 81, 255, 16, 41, 81, 255, 16, 41, 81, 255, 28, 72, 144, 255, 28, 72, 144, 255, 28, 72, 144, 255, 28, 72, 144, 255, 28, 72, 144, 255, 28, 72, 144, 255, 28, 72, 144, 255, 28, 72, 144, 255, 28, 72, 144, 255, 28, 72, 144, 255, 28, 72, 144, 255, 16, 41, 81, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 16, 41, 81, 255, 16, 41, 81, 255, 28, 72, 144, 255, 28, 72, 144, 255, 28, 72, 144, 255, 28, 72, 144, 255, 28, 72, 144, 255, 28, 72, 144, 255, 28, 72, 144, 255, 28, 72, 144, 255, 28, 72, 144, 255, 28, 72, 144, 255, 28, 72, 144, 255, 28, 72, 144, 255, 28, 72, 144, 255, 16, 41, 81, 255, 16, 41, 81, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 16, 41, 81, 255, 205, 205, 205, 255, 16, 41, 81, 255, 16, 41, 81, 255, 28, 72, 144, 255, 28, 72, 144, 255, 28, 72, 144, 255, 28, 72, 144, 255, 28, 72, 144, 255, 28, 72, 144, 255, 28, 72, 144, 255, 28, 72, 144, 255, 16, 41, 81, 255, 16, 41, 81, 255, 16, 41, 81, 255, 38, 38, 38, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 16, 41, 81, 255, 38, 38, 38, 255, 205, 205, 205, 255, 205, 205, 205, 255, 16, 41, 81, 255, 16, 41, 81, 255, 28, 72, 144, 255, 28, 72, 144, 255, 28, 72, 144, 255, 16, 41, 81, 255, 16, 41, 81, 255, 16, 41, 81, 255, 38, 38, 38, 255, 38, 38, 38, 255, 205, 205, 205, 255, 205, 205, 205, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 16, 41, 81, 255, 205, 205, 205, 255, 38, 38, 38, 255, 73, 0, 0, 255, 38, 38, 38, 255, 38, 38, 38, 255, 16, 41, 81, 255, 16, 41, 81, 255, 16, 41, 81, 255, 38, 38, 38, 255, 38, 38, 38, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 38, 38, 38, 255, 38, 38, 38, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 16, 41, 81, 255, 205, 205, 205, 255, 73, 0, 0, 255, 73, 0, 0, 255, 205, 205, 205, 255, 205, 205, 205, 255, 38, 38, 38, 255, 38, 38, 38, 255, 205, 205, 205, 255, 205, 205, 205, 255, 38, 38, 38, 255, 38, 38, 38, 255, 38, 38, 38, 255, 205, 205, 205, 255, 205, 205, 205, 255, 16, 41, 81, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 16, 41, 81, 255, 73, 0, 0, 255, 73, 0, 0, 255, 38, 38, 38, 255, 38, 38, 38, 255, 205, 205, 205, 255, 205, 205, 205, 255, 38, 38, 38, 255, 38, 38, 38, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 16, 41, 81, 255, 16, 41, 81, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 73, 0, 0, 255, 73, 0, 0, 255, 205, 205, 205, 255, 205, 205, 205, 255, 38, 38, 38, 255, 38, 38, 38, 255, 205, 205, 205, 255, 205, 205, 205, 255, 16, 41, 81, 255, 16, 41, 81, 255, 16, 41, 81, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 73, 0, 0, 255, 73, 0, 0, 255, 16, 41, 81, 255, 16, 41, 81, 255, 205, 205, 205, 255, 205, 205, 205, 255, 16, 41, 81, 255, 16, 41, 81, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 73, 0, 0, 255, 0, 0, 0, 0, 0, 0, 0, 0, 16, 41, 81, 255, 16, 41, 81, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 66, 66, 66, 255, 66, 66, 66, 255, 66, 66, 66, 255, 66, 66, 66, 255, 66, 66, 66, 255, 66, 66, 66, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 66, 66, 66, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 66, 66, 66, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 66, 66, 66, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 66, 66, 66, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 128, 128, 255, 66, 66, 66, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 66, 66, 66, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 66, 66, 66, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 66, 66, 66, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 66, 66, 66, 255, 205, 205, 205, 255, 205, 205, 205, 255, 66, 66, 66, 255, 66, 66, 66, 255, 205, 205, 205, 255, 66, 66, 66, 255, 66, 66, 66, 255, 205, 205, 205, 255, 66, 66, 66, 255, 66, 66, 66, 255, 205, 205, 205, 255, 205, 205, 205, 255, 66, 66, 66, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 66, 66, 66, 255, 205, 205, 205, 255, 205, 205, 205, 255, 66, 66, 66, 255, 66, 66, 66, 255, 205, 205, 205, 255, 66, 66, 66, 255, 66, 66, 66, 255, 205, 205, 205, 255, 66, 66, 66, 255, 66, 66, 66, 255, 205, 205, 205, 255, 205, 205, 205, 255, 66, 66, 66, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 66, 66, 66, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 66, 66, 66, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 66, 66, 66, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 66, 66, 66, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 66, 66, 66, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 66, 66, 66, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 66, 66, 66, 255, 205, 205, 205, 255, 66, 66, 66, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 205, 205, 205, 255, 66, 66, 66, 255, 66, 66, 66, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 66, 66, 66, 255, 205, 205, 205, 255, 66, 66, 66, 255, 0, 0, 0, 0, 66, 66, 66, 255, 66, 66, 66, 255, 66, 66, 66, 255, 66, 66, 66, 255, 66, 66, 66, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 66, 66, 66, 255, 205, 205, 205, 255, 66, 66, 66, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 66, 66, 66, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 161, 133, 60, 255, 161, 133, 60, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 161, 133, 60, 255, 161, 133, 60, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 161, 133, 60, 255, 233, 225, 193, 255, 233, 225, 193, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 161, 133, 60, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 161, 133, 60, 255, 233, 225, 193, 255, 233, 225, 193, 255, 233, 225, 193, 255, 233, 225, 193, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 161, 133, 60, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 233, 225, 193, 255, 233, 225, 193, 255, 233, 225, 193, 255, 233, 225, 193, 255, 233, 225, 193, 255, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 161, 133, 60, 255, 213, 194, 115, 255, 213, 194, 115, 255, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 213, 194, 115, 255, 213, 194, 115, 255, 161, 133, 60, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 161, 133, 60, 255, 213, 194, 115, 255, 213, 194, 115, 255, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 161, 133, 60, 255, 161, 133, 60, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 233, 225, 193, 255, 233, 225, 193, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 161, 133, 60, 255, 0, 0, 0, 0, 0, 0, 0, 0, 161, 133, 60, 255, 161, 133, 60, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 161, 133, 60, 255, 233, 225, 193, 255, 233, 225, 193, 255, 233, 225, 193, 255, 233, 225, 193, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 161, 133, 60, 255, 0, 0, 0, 0, 161, 133, 60, 255, 233, 225, 193, 255, 233, 225, 193, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 233, 225, 193, 255, 233, 225, 193, 255, 233, 225, 193, 255, 233, 225, 193, 255, 233, 225, 193, 255, 233, 225, 193, 255, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 0, 0, 0, 0, 161, 133, 60, 255, 233, 225, 193, 255, 233, 225, 193, 255, 233, 225, 193, 255, 233, 225, 193, 255, 213, 194, 115, 255, 213, 194, 115, 255, 161, 133, 60, 255, 213, 194, 115, 255, 213, 194, 115, 255, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 213, 194, 115, 255, 213, 194, 115, 255, 161, 133, 60, 255, 0, 0, 0, 0, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 233, 225, 193, 255, 233, 225, 193, 255, 233, 225, 193, 255, 233, 225, 193, 255, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 0, 0, 0, 0, 161, 133, 60, 255, 213, 194, 115, 255, 213, 194, 115, 255, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 213, 194, 115, 255, 213, 194, 115, 255, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 213, 194, 115, 255, 213, 194, 115, 255, 161, 133, 60, 255, 0, 0, 0, 0, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 213, 194, 115, 255, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 0, 0, 0, 0, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 161, 133, 60, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"format": "RGBA8",
"height": 64,
"mipmaps": false,
"width": 20
}

[sub_resource type="ImageTexture" id="ImageTexture_abyn3"]
image = SubResource("Image_78yir")

[sub_resource type="AtlasTexture" id="AtlasTexture_ub767"]
atlas = SubResource("ImageTexture_abyn3")
region = Rect2(0, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q30r1"]
atlas = SubResource("ImageTexture_abyn3")
region = Rect2(0, 16, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ym8eh"]
atlas = SubResource("ImageTexture_abyn3")
region = Rect2(0, 32, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpj7h"]
atlas = SubResource("ImageTexture_abyn3")
region = Rect2(0, 48, 20, 16)

[node name="Hud" type="CanvasLayer"]
layer = 90
visible = false
script = ExtResource("1_iqgiq")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_jw6vi")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
columns = 4

[node name="HitPointsIcon" type="TextureRect" parent="MarginContainer/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_ub767")
expand_mode = 2
stretch_mode = 3

[node name="HitPointsLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Hit Points"
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_constants/margin_left = 60

[node name="HitPointsAmount" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "5/5"
vertical_alignment = 1

[node name="WisdomIcon" type="TextureRect" parent="MarginContainer/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_q30r1")
expand_mode = 2
stretch_mode = 3

[node name="WisdomLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Wisdom
"
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_constants/margin_left = 60

[node name="WisdomAmount" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "5"
vertical_alignment = 1

[node name="DiplomacyIcon" type="TextureRect" parent="MarginContainer/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_ym8eh")
expand_mode = 2
stretch_mode = 3

[node name="DiplomacyLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Diplomacy"
vertical_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_constants/margin_left = 60

[node name="DiplomacyAmount" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "5"
vertical_alignment = 1

[node name="CurrencyIcon" type="TextureRect" parent="MarginContainer/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_wpj7h")
expand_mode = 2
stretch_mode = 3

[node name="CurrencyLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Dinar"
vertical_alignment = 1

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_constants/margin_left = 60

[node name="CurrencyAmount" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "5"
vertical_alignment = 1
